2010-09-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nndraft.el (nndraft-request-expire-articles): Use the group name
	instead if "nndraft".  Fix found by Nils Ackermann.

2010-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-codepage-iso-8859-list, mm-charset-eval-alist)
	(mm-mime-charset)
	* rfc2047.el (rfc2047-syntax-table)
	* utf7.el (utf7-utf-16-coding-system): Comment fix.

	* nnrss.el (nnrss-read-server-data, nnrss-read-group-data): Use `load'
	rather than `insert-file-contents' and `eval-region'.

	* pgg.el (pgg-run-at-time-1): Define it for XEmacs only; fix if/else
	construction.

	* smime-ldap.el (smime-ldap-search): Remove Emacs 21 compatible code.

	* time-date.el: No need to require cl for Emacs 21.

2010-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mail-source.el (mail-source-report-new-mail)
	* message.el (message-default-mail-headers)
	* mm-decode.el (mm-valid-image-format-p): Comment fix.

	* mml2015.el (mml2015-use): Don't bind recursive-load-depth-limit.

2010-09-28  Julien Danjou  <julien@danjou.info>

	* gnus-gravatar.el (gnus-gravatar-insert): Fix search in case
	mail-address contains the same string as real-name.

	* gnus-ems.el (gnus-put-image): Revert Lars, change and insert
	non-blank in header, otherwise it'll get stripped.

	* gnus-gravatar.el (gnus-gravatar-insert): Search backward for
	real-name, and then for mail address rather than doing : or , search.

2010-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Remove url-http-file-exists-p, w32-focus-frame, and
	x-focus-frame.

	* nnimap.el (auth-source-forget-user-or-password)
	(auth-source-user-or-password): Autoload.

	* message.el (message-from-style, message-interactive)
	(message-cite-prefix-regexp, message-sendmail-envelope-from)
	(message-yank-prefix, message-indentation-spaces, message-signature)
	(message-signature-file): Add comment.

2010-09-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>
